shell-player: avoid NULL unref when there's no next entry

https://bugzilla.gnome.org/show_bug.cgi?id=770134